--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ aiomysql==0.2.0
 aiomqtt==2.3.0
 ultralytics==8.3.56
 opencv-python-headless==4.10.0.84
-numpy>=1.26.0
+numpy==1.26.4
 insightface==0.7.3
 onnxruntime-gpu==1.20.1
 yt-dlp==2024.12.23
