ajutes da area video

--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,7 @@ EPI_CONFIDENCE_THRESHOLD=0.4
 EPI_INPUT_SIZE=640
 
 # GPU
-GPU_ENABLED=true
+GPU_ENABLED=false
 GPU_DEVICE=0
 
 # Edge Mode (set to true on edge devices)
